soya/cal3d/cal3d.pxd

	cdef int CalPhysique_CalculateNormals(CalPhysique *self, CalSubmesh *pSubmesh, float *pNormalBuffer)
	cdef int CalPhysique_CalculateVertices(CalPhysique *self, CalSubmesh *pSubmesh, float *pVertexBuffer)
	cdef int CalPhysique_CalculateVerticesAndNormals(CalPhysique *self, CalSubmesh *pSubmesh, float *pVertexBuffer)
	cdef int CalPhysique_CalculateVerticesNormalsAndTexCoords(CalPhysique *self, CalSubmesh *pSubmesh, float *pVertexBuffer, int NumTexCoords)
	cdef int CalPhysique_CalculateTangentSpaces(CalPhysique *self, CalSubmesh *pSubmesh, int mapId, float *pTangentSpaceBuffer)
	cdef void CalPhysique_Delete(CalPhysique *self)
	cdef CalPhysique *CalPhysique_New(CalModel *pModel)
	cdef void CalPhysique_Update(CalPhysique *self)
	cdef void CalQuaternion_Blend(CalQuaternion *self, float d, CalQuaternion *pQ)
	cdef void CalQuaternion_Clear(CalQuaternion *self)
	cdef void CalQuaternion_Conjugate(CalQuaternion *self)
	cdef void CalQuaternion_Delete(CalQuaternion *self)
	cdef void CalQuaternion_Equal(CalQuaternion *self, CalQuaternion *pQ)
	cdef float *CalQuaternion_Get(CalQuaternion *self)
	cdef void CalQuaternion_Multiply(CalQuaternion *self, CalQuaternion *pQ)
	cdef void CalQuaternion_MultiplyVector(CalQuaternion *self, CalVector *pV)
	cdef CalQuaternion *CalQuaternion_New()
	cdef void CalQuaternion_Op_Multiply(CalQuaternion *pResult, CalQuaternion *pQ, CalQuaternion *pR)
	cdef void CalQuaternion_Set(CalQuaternion *self, float qx, float qy, float qz, float qw)
	cdef int CalRenderer_BeginRendering(CalRenderer *self)
	cdef void CalRenderer_Delete(CalRenderer *self)
	cdef void CalRenderer_EndRendering(CalRenderer *self)
	cdef void CalRenderer_GetAmbientColor(CalRenderer *self, unsigned char *pColorBuffer)
	cdef void CalRenderer_GetDiffuseColor(CalRenderer *self, unsigned char *pColorBuffer)
	cdef int CalRenderer_GetFaceCount(CalRenderer *self)
	cdef int CalRenderer_GetFaces(CalRenderer *self, int *pFaceBuffer)
	cdef int CalRenderer_GetMapCount(CalRenderer *self)
	cdef CalUserData CalRenderer_GetMapUserData(CalRenderer *self, int mapId)
	cdef int CalRenderer_GetMeshCount(CalRenderer *self)
	cdef int CalRenderer_GetNormals(CalRenderer *self, float *pNormalBuffer)
	cdef float CalRenderer_GetShininess(CalRenderer *self)
	cdef void CalRenderer_GetSpecularColor(CalRenderer *self, unsigned char *pColorBuffer)
	cdef int CalRenderer_GetSubmeshCount(CalRenderer *self, int meshId)
	cdef int CalRenderer_GetTextureCoordinates(CalRenderer *self, int mapId, float *pTextureCoordinateBuffer)
	cdef int CalRenderer_GetVertexCount(CalRenderer *self)
	cdef int CalRenderer_GetVertices(CalRenderer *self, float *pVertexBuffer)
	cdef int CalRenderer_GetVerticesAndNormals(CalRenderer *self, float *pVertexBuffer)
	cdef int CalRenderer_GetVerticesNormalsAndTexCoords(CalRenderer *self, float *pVertexBuffer, int NumTexCoords)
	cdef int CalRenderer_GetTangentSpaces(CalRenderer *self, int mapId, float *pTangentSpaceBuffer)
	cdef int CalRenderer_IsTangentsEnabled(CalRenderer *self, int mapId)
	cdef CalRenderer *CalRenderer_New(CalModel* pModel)
	cdef int CalRenderer_SelectMeshSubmesh(CalRenderer *self, int meshId, int submeshId)
	cdef void CalSaver_Delete(CalSaver *self)
	cdef CalSaver *CalSaver_New()
	cdef int CalSaver_SaveCoreAnimation(CalSaver *self, char *strFilename, CalCoreAnimation *pCoreAnimation)
	cdef int CalSaver_SaveCoreMaterial(CalSaver *self, char *strFilename, CalCoreMaterial *pCoreMaterial)
	cdef int CalSaver_SaveCoreMesh(CalSaver *self, char *strFilename, CalCoreMesh *pCoreMesh)
	cdef int CalSaver_SaveCoreSkeleton(CalSaver *self, char *strFilename, CalCoreSkeleton *pCoreSkeleton)
	cdef void CalSkeleton_CalculateState(CalSkeleton *self)
	cdef void CalSkeleton_ClearState(CalSkeleton *self)
	cdef void CalSkeleton_Delete(CalSkeleton *self)
	cdef CalBone *CalSkeleton_GetBone(CalSkeleton *self, int boneId)
	cdef CalCoreSkeleton *CalSkeleton_GetCoreSkeleton(CalSkeleton *self)
	cdef void CalSkeleton_LockState(CalSkeleton *self)
	cdef CalSkeleton *CalSkeleton_New(CalCoreSkeleton *pCoreSkeleton)
	cdef int CalSkeleton_GetBonePoints(CalSkeleton *self, float *pPoints)
	cdef int CalSkeleton_GetBonePointsStatic(CalSkeleton *self, float *pPoints)
	cdef int CalSkeleton_GetBoneLines(CalSkeleton *self, float *pLines)
	cdef int CalSkeleton_GetBoneLinesStatic(CalSkeleton *self, float *pLines)
	cdef void CalSpringSystem_CalculateForces(CalSpringSystem *self, CalSubmesh *pSubmesh, float deltaTime)
	cdef void CalSpringSystem_CalculateVertices(CalSpringSystem *self, CalSubmesh *pSubmesh, float deltaTime)
	cdef void CalSpringSystem_Delete(CalSpringSystem *self)
	cdef CalSpringSystem *CalSpringSystem_New(CalModel *pModel)
	cdef void CalSpringSystem_Update(CalSpringSystem *self, float deltaTime)
	cdef void CalSubmesh_Delete(CalSubmesh *self)
	cdef CalCoreSubmesh *CalSubmesh_GetCoreSubmesh(CalSubmesh *self)
	cdef int CalSubmesh_GetCoreMaterialId(CalSubmesh *self)
	cdef int CalSubmesh_GetFaceCount(CalSubmesh *self)
	cdef int CalSubmesh_GetFaces(CalSubmesh *self, int *pFaceBuffer)
	cdef int CalSubmesh_GetVertexCount(CalSubmesh *self)
	cdef int CalSubmesh_HasInternalData(CalSubmesh *self)
	cdef CalSubmesh *CalSubmesh_New(CalCoreSubmesh *pCoreSubmesh)
	cdef void CalSubmesh_SetCoreMaterialId(CalSubmesh *self, int coreMaterialId)
	cdef void CalSubmesh_SetLodLevel(CalSubmesh *self, float lodLevel)
	cdef void CalVector_Add(CalVector *self, CalVector *pV)
	cdef void CalVector_Blend(CalVector *self, float d, CalVector *pV)
	cdef void CalVector_Clear(CalVector *self)
	cdef void CalVector_Delete(CalVector *self)
	cdef void CalVector_Equal(CalVector *self, CalVector *pV)
	cdef void CalVector_InverseScale(CalVector *self, float d)
	cdef float *CalVector_Get(CalVector *self)
	cdef float CalVector_Length(CalVector *self)
	cdef CalVector *CalVector_New()
	cdef float CalVector_Normalize(CalVector *self)
	cdef void CalVector_Op_Add(CalVector *pResult, CalVector *pV, CalVector *pU)
	cdef void CalVector_Op_Subtract(CalVector *pResult, CalVector *pV, CalVector *pU)
	cdef void CalVector_CalVector_Op_Scale(CalVector *pResult, CalVector *pV, float d)
	cdef void CalVector_CalVector_Op_InverseScale(CalVector *pResult, CalVector *pV, float d)
	cdef float CalVector_Op_Scalar(CalVector *pV, CalVector *pU)
	cdef void CalVector_Op_Cross(CalVector *pResult, CalVector *pV, CalVector *pU)
	cdef void CalVector_Scale(CalVector *self, float d)
	cdef void CalVector_Set(CalVector *self, float vx, float vy, float vz)
	cdef void CalVector_Subtract(CalVector *self, CalVector *pV)
	cdef void CalVector_Transform(CalVector *self, CalQuaternion *pQ)

#cdef extern from "cal3d_hack.h":
#  cdef void CalModel_ResetMixer(CalModel *self)
	
	
